feat: cookie functions were added
